--- a/magasin/magasin/Properties/Resources.resx
+++ b/magasin/magasin/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="pitr_Sheep_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\pitr-Sheep-icon.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Search" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\icone_search.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
